<resources>
    <string name="app_name">KILA</string>
    <string name="logo_application">Logo Application</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="daftar">Daftar!</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="birthday">Birthday</string>
    <string name="back_button">Back Button</string>
    <string name="add_photo">Add Photo</string>
    <string name="name">Name</string>
    <string name="password_harus_minimal_6_karakter">Password harus minimal 6 karakter</string>
    <string name="tipe_akun">Tipe Akun:</string>
    <string-array name="tipe_akun">
        <item>Pengguna</item>
        <item>Administrator</item>
    </string-array>
    <string-array name="jenislapangan">
        <item>Basket</item>
        <item>Futsal</item>
        <item>Badminton</item>
        <item>Sepakbola</item>
    </string-array>


</resources>